fix(ui): scrollbar is no longer displayed on windows

--- a/src/module/component/avatar.component.scss
+++ b/src/module/component/avatar.component.scss
@@ -1,6 +1,6 @@
 .avatar {
   text-align : center;
-  overflow   : auto;
+  overflow   : hidden;
 
   img {
     vertical-align: top;
